# robothrow

./: README.md
robthrow_control/: CMakeLists.txt  package.xml
robthrow_control/config/: control.yaml
robthrow_control/launch/: robthrow_control.launch
robthrow_control/nodes/: thrower_control
robthrow_description/: CMakeLists.txt  package.xml
robthrow_description/urdf/: thrower.urdf.xacro
robthrow_gazebo/: CMakeLists.txt  package.xml
robthrow_gazebo/launch/: robthrow_gazebo.launch
