<?xml version="1.0"?>
<package format="2">
  <name>robthrow_control</name>
  <version>0.0.1</version>
  <description>The robthrow_control package</description>

  <maintainer email="lars.grimstad@nmbu.no">Lars Grimstad</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robthrow_description</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>


  <export>
  </export>
</package>
