<?xml version="1.0"?>
<package format="2">
  <name>robthrow_description</name>
  <version>0.0.1</version>
  <description>The robthrow_description package</description>

  <maintainer email="lars.grimstad@nmbu.no">Lars Grimstad</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
