<?xml version="1.0"?>
<package format="2">
  <name>robthrow_gazebo</name>
  <version>0.0.1</version>
  <description>The robthrow_gazebo package</description>

  <maintainer email="lars.grimstad@nmbu.no">Lars Grimstad</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>robthrow_control</exec_depend>
  <exec_depend>robthrow_description</exec_depend>

  <export>
  </export>
</package>
